--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/homebase_gear_guard"
+# Database Configuration - Supabase
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres"
 
 # Server Configuration
 PORT=3001
@@ -8,5 +8,11 @@ NODE_ENV=development
 # CORS Configuration
 CORS_ORIGIN="http://localhost:5173"
 
-# Example with actual PostgreSQL connection string:
-# DATABASE_URL="postgresql://postgres:yourpassword@localhost:5432/homebase_gear_guard"
+# Supabase Configuration (Optional)
+SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+SUPABASE_PROJECT_REF="YOUR_PROJECT_REF"
+
+# Example with actual Supabase connection:
+# DATABASE_URL="postgresql://postgres:yourpassword@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres"
+# SUPABASE_URL="https://llwasxekjvvezufpyolq.supabase.co"
+# SUPABASE_PROJECT_REF="llwasxekjvvezufpyolq"
