Add Railway deployment configuration and fix build issues
- Add railway.json for Railway deployment configuration
- Add nixpacks.toml for optimized Nixpacks build process
- Add Dockerfile for containerized deployment option
- Add Procfile for process definition
- Add .dockerignore for optimized Docker builds
- Update package.json with backend deployment scripts
- Fix environment variable handling in backend/src/config/env.ts
- Improve error handling and fallback values for production deployment

These changes resolve Railway deployment build failures and enable successful deployment to Railway platform.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:backend": "cd backend && npm start",
+    "build:backend": "cd backend && npm run build",
+    "install:backend": "cd backend && npm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
