Fix Railway deployment: Force npm usage and add deployment configs
- Update nixpacks.toml to use npm instead of bun
- Add .npmrc for npm configuration
- Add .nvmrc to specify Node.js 18
- Add .railwayignore for clean builds
- Update railway.json with explicit build commands
- Add engine specifications to package.json files
- Fix environment variable handling in backend

This resolves the 'lockfile had changes, but lockfile is frozen' error

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,24 @@
 [phases.setup]
-nixPkgs = ["nodejs-18_x", "npm-9_x"]
+nixPkgs = ["nodejs-18_x"]
+nixpkgsArchive = "https://github.com/NixOS/nixpkgs/archive/nixos-23.05.tar.gz"
 
 [phases.install]
 cmds = [
-  "npm ci --include=dev",
-  "cd backend && npm ci --include=dev"
+  "npm ci --only=production --no-audit --no-fund",
+  "cd backend && npm ci --only=production --no-audit --no-fund"
 ]
 
 [phases.build]
-cmds = ["cd backend && npm run build"]
+cmds = [
+  "npm ci --include=dev --no-audit --no-fund",
+  "cd backend && npm ci --include=dev --no-audit --no-fund",
+  "cd backend && npm run build"
+]
 
 [start]
 cmd = "cd backend && npm start"
+
+[variables]
+NODE_ENV = "production"
+NPM_CONFIG_AUDIT = "false"
+NPM_CONFIG_FUND = "false"
