Add Render deployment configuration with full-stack setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,12 @@ CORS_ORIGIN="http://localhost:5173"
 SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 SUPABASE_PROJECT_REF="YOUR_PROJECT_REF"
 
+# Production Example for Render:
+# NODE_ENV=production
+# PORT=10000
+# CORS_ORIGIN="https://your-app-name.onrender.com"
+# DATABASE_URL="postgresql://postgres:yourpassword@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres"
+
 # Example with actual Supabase connection:
 # DATABASE_URL="postgresql://postgres:yourpassword@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres"
 # SUPABASE_URL="https://llwasxekjvvezufpyolq.supabase.co"
