--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
+    "start": "cd backend && npm start",
     "start:backend": "cd backend && npm start",
     "build:backend": "cd backend && npm run build",
-    "install:backend": "cd backend && npm install"
+    "install:backend": "cd backend && npm install",
+    "build:all": "npm run build && npm run build:backend",
+    "install:all": "npm install && npm run install:backend"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
