--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
     buildCommand: |
       npm install
       cd backend && npm install
-      npm run build
       cd backend && npm run build
+      cd .. && npm run build
     startCommand: cd backend && npm start
     healthCheckPath: /health
     envVars:
