--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
     "db:migrate": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "prestart": "npm run build"
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "keywords": [
     "express",
@@ -26,6 +25,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -38,9 +40,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "drizzle-kit": "^0.31.4",
