Fix: Improve database connection debugging and configuration
- Enhanced database connection with better error logging
- Added DNS resolution error debugging info
- Set DATABASE_URL to sync: false in render.yaml for manual configuration
- Mask password in connection logs for security

--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,6 @@ services:
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        value: postgresql://postgres:Srinithija02@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres
+        sync: false
       - key: CORS_ORIGIN
         value: https://homebase-gear-guard.onrender.com
