--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ PORT=3001
 NODE_ENV=development
 
 # CORS Configuration
-CORS_ORIGIN="http://localhost:5173"
+CORS_ORIGIN="http://localhost:8080,http://localhost:8081,http://localhost:5173,http://localhost:3000"
 
 # Supabase Configuration (Optional)
 SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
