--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,6 @@ services:
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        value: postgresql://postgres:Srinithija02@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres?sslmode=require&connect_timeout=60
+        value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true
       - key: CORS_ORIGIN
         value: https://homebase-gear-guard.onrender.com
