--- a/render.yaml
+++ b/render.yaml
@@ -24,5 +24,7 @@ services:
         value: postgresql://postgres:Srinithija02@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres?sslmode=require
       - key: DATABASE_URL_POOLER_SESSION
         value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+      - key: DATABASE_URL_IPv4_DIRECT
+        value: postgresql://postgres:Srinithija02@54.85.109.178:5432/postgres?sslmode=require
       - key: CORS_ORIGIN
         value: https://homebase-gear-guard.onrender.com
