--- a/render.yaml
+++ b/render.yaml
@@ -23,7 +23,7 @@ services:
       - key: DATABASE_URL_POOLER_SESSION
         value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true
       - key: DATABASE_URL_FALLBACK
-        value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require&connect_timeout=10
+        value: postgresql://postgres:Srinithija02@db.llwasxekjvvezufpyolq.supabase.co:5432/postgres?sslmode=require
       - key: DATABASE_URL_IPv4_DIRECT
         value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require&application_name=render-app
       - key: CORS_ORIGIN
