Fix CSP violation: Configure correct API URLs for production
- Add smart API URL detection based on environment
- Configure production API URL in render.yaml build process
- Add environment variable files for dev/production
- Enhanced error handling for network issues
- Created comprehensive deployment troubleshooting guide

Fixes 'Refused to connect' CSP errors in production deployment

--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,8 @@ services:
       npm ci
       npm run build
       cd ..
+      # Set production API URL for frontend build
+      export VITE_API_URL=https://homebase-gear-guard.onrender.com/api
       npm run build
     startCommand: cd backend && npm start
     healthCheckPath: /health
@@ -28,3 +30,5 @@ services:
         value: postgresql://postgres.llwasxekjvvezufpyolq:Srinithija02@aws-0-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require&application_name=render-app
       - key: CORS_ORIGIN
         value: https://homebase-gear-guard.onrender.com
+      - key: VITE_API_URL
+        value: https://homebase-gear-guard.onrender.com/api
